# AI-Text-Extractor

./: .gitignore  Dockerfile  LICENSE  README.md  README_HF.md  env.example  pyproject.toml  requirements.txt  sample.txt
.github/: DEPLOY_SETUP.md
.github/workflows/: deploy-to-hf.yml  sync-to-huggingface.yml
src/: api_app.py  streamlit_app.py
src/data_extractor/: __init__.py  core.py  utils.py
