[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-extractor"
version = "0.1.0"
description = "Extract text from PDFs and documents using Google Vision API with Streamlit interface"
readme = "README.md"
requires-python = ">=3.8.1"
license = {text = "MIT"}
authors = [
    {name = "Abhash Chakraborty", email = "abhashchak14@gmail.com"}
]
keywords = ["pdf", "text-extraction", "google-vision", "streamlit", "resume", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/Abhash-Chakraborty/AI-Text-Extractor"
Repository = "https://github.com/Abhash-Chakraborty/AI-Text-Extractor"
Issues = "https://github.com/Abhash-Chakraborty/AI-Text-Extractor/issues"
HuggingFace = "https://huggingface.co/spaces/abhash-chakraborty/text_extractor"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/data_extractor"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
